# slung_pose_estimation

./: CMakeLists.txt  package.xml
data/: data_vnav_0.01.txt  data_vnav_0.1.txt  pnp_errors_Ippe_square.txt  pnp_errors_iterative.txt  pnp_measurements_p3p.txt
include/slung_pose_estimation/: State.h  datatypes.h  slungPoseEstimation.h  slungPoseMeasurement.h  slungPoseMeasurement_single.h  utils.h
launch/: estimator.launch.py  estimator.launch.yaml
src/: State.cpp  plot_errors.py  plot_measurement.py  slungPoseEstimation.cpp  slungPoseMeasurement.cpp  slungPoseMeasurement_single.cpp  slung_pose_estimation.cpp  tester.cpp  utils.cpp
src/utils_estimation/: plots.h  utils.h
